Fixing image sizing on mobile

--- a/styles/ImageGallery.module.css
+++ b/styles/ImageGallery.module.css
@@ -26,7 +26,7 @@
         filter: brightness(1);
         transition: all 0.3s ease-in-out;
         border: 2px solid #e25022;
-        object-position:center;
+        object-fit:contain;
     }
 
         .gallery_item img:hover {
